  - Adjusted carving sheeps.
  - Fixed leatherworkers and tanners not buying leather and hides.
  - Male NPCs now have a 75% chance of getting a beard when created.
  - Made shrink potions craftable.
  - Changed the color of shrink potions.
  - Added Tokuno includes for regions and spawnregions.
  - Removed the "Pink Spawn" from decoration.
  - Fixed skeletal steeds stats and skills.
 * Python Script Changes:
  - Fixed bug #0000369. (Equip possible although item.movable = 3)
  - Fixed bug #0000361. (Pets don't follow trough gate)
  - Added xoffset, yoffset and zoffset to socket.attachmultitarget. (housing.deed)
  - Fixed a runebook bug. (Refuses to work when full)
  - Rewrote parts of the runebook.
  - Added support for creature based poison immunity.
  - Added support for hit based poisoning.
  - Fixed several bugs in lumberjacking.
  - Chars will now get revealed when using training dummy or archery butte.
  - Fixed blood created at carving not decaying for a long time.
  - Fixed fishing pole not wearing out.
  - Fixed gainfactor for skills always beeing 1.0
  - Fixed a skill check bug with lumberjacking.
  - Implemented shrink potions.
  - Fixed the tooltip of alchemy tools not being resend.
  - Fixed the input system trying to call not existent scripts.
  - Fixed the color of shrunken pets.
  - Implemented shrink command.
  - Implemented telem command.
  - Added onConnect to system.players
  - Fixes for moongate.py
  - Guild button now opens guildstone menu by default.
  - Fixed resistances for dragon scale armors.
  - Fixed the open door macro.
  - Fixed bug #0000310. (Invis spell duration too brief, Players will now be able to use stealth 
    if they are hidden by the invisibility spell, even if they don't have 80.0 Hiding )
  - Fixed bug #0000321. (Info Gump not setting boolean values to True if input is 1)
 * Misc. Changes:
  - FAQ Updates.
 * Known Issues, Bugs, and Missing Features:
  - Some skills are still incomplete.
  - Spawn regions are incomplete.